# rag-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  health_checks.py  main.py
backend/app/agent/: __init__.py  composer.py  graph.py  nodes.py  runtime.py  schemas.py  state.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  health.py  prompt_templates.py  upload.py
backend/app/config/: __init__.py  database.py  embedding.py  job_queue.py  middleware.py
backend/app/database/tables/: __init__.py  base.py  chat_history.py  vector_document.py
backend/app/eval/: questions.sample.json  ragas_cli.py
backend/app/prompts/: __init__.py
backend/app/prompts/defaults/: refine_system.txt  refine_user.txt  response_system.txt  response_user.txt
backend/app/rag/: __init__.py  chunker.py  docs_transformer.py  embedder.py  extractor.py
backend/app/routes/: __init__.py  health.py  upload.py
backend/app/services/: __init__.py  database.py  embedding.py  job_queue.py  language_model.py  pgvector_store.py  pl_queue.py  prompt_templates.py  redis_queue.py  retrieval.py  vector_db.py
backend/app/storage/: __init__.py
backend/app/utils/: __init__.py  langchain_text.py
backend/app/workers/: __init__.py  file_embedder.py  pipeline.py  vector_store.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  config.ts  env.d.ts  style.css
frontend/src/api/: health.ts  promptTemplates.ts  upload.ts
frontend/src/components/: AppToast.vue  AssistantPromptFlowDiagram.vue  ChatPage.vue  DocumentsPage.vue  PromptsPage.vue  SystemHealthBadge.vue
frontend/src/lib/: chatStream.ts  documentsJobsStore.ts  (+3 more)
